--- a/style.css
+++ b/style.css
@@ -54,16 +54,16 @@ header {
   header #years_dropdn {
     margin-right: 10px; }
 
-#intro {
+.intro {
   text-align: center;
-  width: 700px;
+  width: 70%;
   margin: auto;
   font-size: 48px;
   font-weight: 700;
   color: #E3E8EB;
   margin-top: 200px; }
 
-#data_section, #heading_section {
+#data_section, #heading_section_top {
   display: inline-block;
   vertical-align: top; }
 
@@ -85,21 +85,21 @@ header {
     cursor: pointer;
     color: #6288A5; }
 
-#heading_section {
+#heading_section_top {
   width: 66.66%;
   padding-left: 16px; }
-  #heading_section h2 {
+  #heading_section_top #heading_section h2 {
     font-size: 18px;
     font-weight: 500;
     margin: 16px 0 24px 0; }
-  #heading_section p {
+  #heading_section_top #heading_section p {
     font-size: 14px;
     margin-top: 24px; }
-  #heading_section a {
+  #heading_section_top #heading_section a {
     font-size: 12px;
     color: #6288A5;
     text-decoration: none; }
-  #heading_section a:hover {
+  #heading_section_top #heading_section a:hover {
     color: #3C75A0; }
 
 /*# sourceMappingURL=style.css.map */
