--- a/style.css
+++ b/style.css
@@ -94,7 +94,8 @@ header {
     margin: 16px 0 24px 0; }
   #heading_section_top #heading_section p {
     font-size: 14px;
-    margin-top: 24px; }
+    margin-top: 24px;
+    line-height: 19px; }
   #heading_section_top #heading_section a {
     font-size: 12px;
     color: #6288A5;
