--- a/style.scss
+++ b/style.scss
@@ -128,6 +128,7 @@ header {
     p {
       font-size: 14px;
       margin-top: 24px;
+      line-height: 19px;
     }
     a {
       font-size: 12px;
